[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/Lato/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://uitheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/ui/menu/multiplayermenu.gd" type="Script" id=3]
[ext_resource path="res://assets/font/Noto_Sans_JP/NotoSansJP-Medium.otf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=70]
bg_color = Color( 0.0588235, 0.0235294, 0.0666667, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=71]
size = 22
use_filter = true
font_data = ExtResource( 1 )
fallback/0 = ExtResource( 7 )

[node name="Multiplayer" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[node name="MultiplayerWindow" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -70.0
margin_right = 220.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 70 )

[node name="Title" type="Label" parent="MultiplayerWindow"]
anchor_right = 1.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 71 )
text = "Multiplayer"
align = 1
valign = 1

[node name="UsernameText" type="LineEdit" parent="MultiplayerWindow"]
margin_left = 132.0
margin_top = 38.0
margin_right = 308.0
margin_bottom = 66.0
placeholder_text = "Username"

[node name="IPText" type="LineEdit" parent="MultiplayerWindow"]
margin_left = 28.0
margin_top = 78.0
margin_right = 212.0
margin_bottom = 106.0
placeholder_text = "IP"

[node name="PortText" type="LineEdit" parent="MultiplayerWindow"]
margin_left = 228.0
margin_top = 78.0
margin_right = 412.0
margin_bottom = 106.0
placeholder_text = "Port"

[node name="Host" type="Button" parent="MultiplayerWindow"]
margin_left = 92.0
margin_top = 118.0
margin_right = 212.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 56, 11 )
text = "Host"

[node name="Join" type="Button" parent="MultiplayerWindow"]
margin_left = 228.0
margin_top = 118.0
margin_right = 348.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 56, 11 )
text = "Join"

[node name="BlackFade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatWindow" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -168.0
margin_right = 220.0
margin_bottom = 152.0
custom_styles/panel = SubResource( 70 )

[node name="Title" type="Label" parent="ChatWindow"]
anchor_right = 1.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 71 )
text = "Chatroom"
align = 1
valign = 1

[node name="MessageBox" type="TextEdit" parent="ChatWindow"]
margin_left = 20.0
margin_top = 40.0
margin_right = 412.0
margin_bottom = 256.0
readonly = true

[node name="SendMessageText" type="LineEdit" parent="ChatWindow"]
margin_left = 20.0
margin_top = 272.0
margin_right = 324.0
margin_bottom = 304.0
placeholder_text = "Message"

[node name="Send" type="Button" parent="ChatWindow"]
margin_left = 340.0
margin_top = 272.0
margin_right = 412.0
margin_bottom = 304.0
text = "Send"

[connection signal="pressed" from="MultiplayerWindow/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="MultiplayerWindow/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="ChatWindow/Send" to="." method="_on_Send_pressed"]
